In this file we record the changes since the first GAP 4 release of
the ANUPQ package.

Version 3.1a (2013-10-15)
   o include/pq_author.h:
       pq program is now version 1.9
   o Improved the build system: It now makes use of GNU autoconf, and
     the various Makefiles are now more robust, and compatible with
     both GAP 4.4 and 4.5. This should simplify building anupq for
     many users.
   o Werner Nickel is no longer maintainer.
   o Max Horn is new (co-)maintainer.
   o Fixed some warnings in the C code.

Version 3.0 (2006-01-24)
   o lib/{anupga.gi,anupq.gi,anupqprop.gi,anupqxdesc.gi}:
       deprecated `PrimeOfPGroup' replaced by `PrimePGroup'
   o lib/anusp.gi:
       improved non-isomorphism test in `IsPqIsomorphicPGroup' from 
       checking the exponent-p length to checking the order of the
       terms in the lower exponent-p central series (suggested by
       Marco Costantini), and corrected by Jack Schmidt
   o pre-GAP 4.4 compatibility features removed:
       - lib/anupqhead.g:
         . banner removed ... this role is performed by PackageInfo.g
           since GAP 4.4; thus `pkgbanner' option no longer exists
         . file split into lib/anupqhead.gd and lib/anupqhead.gi
       - lib/anupq4r2cpt.g[di]:
           (GAP 4.2 compatibility) deleted from distribution
       - lib/anustab.gi:
           changed `AutPGrp' package test to corresponding GAP 4.4 test
       - read.g,init.g:
           . removed all but the `ReadPkg' commands 
           . changed `ReadPkg' to `ReadPackage'
           . made adjustments for lib/anupqhead.g split
   o src/GAP_link_via_file.c:
       deprecated GAP code updated for version 4.4
   o include/pq_author.h:
       pq program is now version 1.8
   o standalone-doc/{README,guide.tex}:
       modified for version 1.8 of the pq program
   o testPq.in
       - updated to check for GAP 4.4 and AutPGrp 1.2 as minimum versions
       - now also checks the version of the pq program