@@ -496,9 +496,7 @@ gap> Size( Image(phi) );
 \endexample
 
 Typing: `PqExample( "EpimorphismStandardPresentation" );' runs the  above
-example in {\GAP} (see~"PqExample"). Note that `AssignGeneratorVariables'
-(see~"ref:AssignGeneratorVariables")  has  only  been   available   since
-{\GAP}~4.3.
+example in {\GAP} (see~"PqExample").
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Testing p-Groups for Isomorphism}
