@@ -15,9 +15,9 @@ under UNIX  and in environments  similar to UNIX. In particular
 it is known to work on Linux and Mac OS X, and also on Windows
 equipped with cygwin.
 
-The current version of the  {\ANUPQ}  package  requires  {\GAP}~4.4,  and
-version 1.2 of the {\AutPGrp} package. However, we recommend using
-at least {\GAP}~4.6 and {\AutPGrp}~1.5.
+The current version of the  {\ANUPQ}  package  requires at least {\GAP}~4.5,
+and version 1.5 of the {\AutPGrp} package. However, we recommend using
+{\GAP}~4.6 or newer.
 
 To install the {\ANUPQ} package, move the file `anupq-<XXX>.tar.gz' for some
 version number <XXX> into the  `pkg'  directory  in  which  you  plan  to
@@ -135,7 +135,7 @@ program as a standalone" for more details). To run the tests, just type:
 
 Some of the tests the script runs take a while. Please  be  patient.  The
 script checks that you not only have a correct {\GAP} (at  least  version
-4.4) installation that includes the  {\AutPGrp}  package,  but  that  the
+4.5) installation that includes the  {\AutPGrp}  package,  but  that  the
 {\ANUPQ} package and its `pq' binary interact correctly. You  should  see
 something like the following output:
 
