@@ -63,12 +63,13 @@ $p$-groups.
 %Further   background   may   be   found   in~\cite{OBr95},   \cite{VL84}
 %and~\cite{NNN98}.
 
-The current version of the  {\ANUPQ}  package  requires  {\GAP}~4.4,  and
-version 1.2 of the {\AutPGrp} package. All code  that  made  the  package
-compatible with earlier versions of {\GAP} has been removed. If you still
-have {\GAP}~4.3 (at least fix4), then  you  must  use  {\ANUPQ}~2.2,  and
-{\AutPGrp}~1.1. You should not  use  earlier  versions  of  the  {\ANUPQ}
-package since they are known to have bugs.
+The current version of the {\ANUPQ} package requires {\GAP}~4.5, and
+version 1.5 of the {\AutPGrp} package. All code that made the package
+compatible with earlier versions of {\GAP} has been removed. If you must
+use an older {\GAP} version and cannot upgrade (which we strongly
+recommend), then you may try using an older {\ANUPQ} version. However,
+you should not use versions of the {\ANUPQ} package older than 2.2, since
+they are known to have bugs.
 
 *How to read this manual*
 
@@ -190,6 +191,10 @@ Below we list the main changes between versions of the {\ANUPQ} package.
 \atindex{option pkgbanner}{@option \noexpand`pkgbanner'}
 
 \item{`3.1'}
+The {\ANUPQ} package now requires at least {\GAP}~4.5 and version 1.5 of the
+{\AutPGrp} package.
+
+\item{}
 Max Horn fixed many warnings in the `pq' program code (`pq' program is now
 version 1.9).
 
