@@ -116,9 +116,9 @@ necessary code can be found in the \texttt{gap} directory of these
 distributions.
 The program is also distributed as part of Quotpic.
 
-Version 1.8 of the pq program (i.e.~the version you are currently reading
+Version 1.9 of the pq program (i.e.~the version you are currently reading
 the documentation for) is configured to call {\sf GAP}, at least version
-4.4, to compute stabilisers when needed.
+4.5, to compute stabilisers when needed.
 
 The FORTRAN version of this program was known as the 
 Nilpotent Quotient Program.
@@ -135,8 +135,8 @@ package, i.e. in the directory above, do:
 
 If you are running Linux you may omit \textit{TARGET}. The path 
 \textit{GAPPATH} should be the path of a \emph{shell script} that runs
-{\sf GAP} 4 with packages {\sf AutPGrp} (at least version 1.2) and
-{\sf ANUPQ} (at least version 3.0)
+{\sf GAP} 4 with packages {\sf AutPGrp} (at least version 1.5) and
+{\sf ANUPQ} (at least version 3.1)
 installed. If the {\sf ANUPQ} and/or {\sf AutPGrp} packages are not installed
 in the \texttt{pkg} directory of the {\sf GAP} 4 distribution, then
 the \texttt{-l} option (last line of the \emph{shell script} previously
